# truffle

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  package.xml
catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_generated/installspace/: truffle.pc  truffleConfig.cmake
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: truffle.pc
devel/lib/truffle/: controller1  vision_sim1
devel/share/truffle/cmake/: truffleConfig.cmake
gtest/: CTestTestfile.cmake  Makefile
launch/: truffle.launch  truffleshuffle.launch
nodes/: motion.py  param.py  run_this.py
src/: controller1.cpp  controller1.h  controller1.h~  defense.cpp  defense.h  follow.cpp~  follow.h~  globals.cpp  globals.h  globals.h~  helper.cpp  helper.h  math.cpp  math.h  move.h~  offense.cpp  offense.h  quadrant.cpp  quadrant.h  skills.cpp  skills.h  strategy.cpp  strategy.h  test.cpp  test.h  truffle_vision.cpp  vision1.cpp
src/defensive_plays/: D_Moving_Screen.cpp  D_Moving_Screen.h
src/offensive_plays/: O_Avoid_Corner.cpp  O_Avoid_Corner.h  O_Dribble_Ball.cpp  O_Dribble_Ball.h  O_Intercept_Avoid.cpp  O_Intercept_Avoid.h  O_Intercept_Ball.cpp  O_Intercept_Ball.h
src/strategy/: strategy.cpp  strategy.h
